objects/SaiObj700__c.object
<CustomObject>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <type>Email</type>
    </fields>
    <label>SaiObj700</label>
    <nameField>
        <label>SaiObj700 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SaiObj700s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>